2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-mouse-properties.c (drawing_area_expose_event): Kill warning
	(dialog_button_clicked_cb): Use G_TYPE_STRING
	(dialog_button_clicked_cb): Use GtkDialog
	(left_handed_toggle_cb): Do not crash on NULL value

Tue Jan  8 15:47:24 2002  Jonathan Blandford  <jrb@redhat.com>

	* .cvsignore: New ignores.
	* gnome-mouse-properties.glade: Update of glade file for cursors
	* mouse-cursor-normal-large.png: New images
	* mouse-cursor-normal.png:
	* mouse-cursor-white-large.png:
	* mouse-cursor-white.png:
	* mouse-properties-capplet.c: (setup_dialog), (create_dialog),
	(main): Add support for new properties.  Don't fully work yet, but
	we'll get it later.
	* mouse-properties.glade: not sure what changed -- need to remove
	this file.

2001-12-20  Seth Nickell  <snickell@stanford.edu>

	* mouse.desktop.in:

	Add Categories field.

2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* mouse.desktop.in (Icon, Exec): Update

	* mouse-properties-capplet.c (dialog_button_clicked_cb): Update
	(main): Use a GtkDialog rather than GnomeDialog; don't place weak
	ref on gtk_main_quit
	(load_pixbufs): Locate files with gnome_program_locate_file
	Eliminate compiler warnings

2001-12-20  Hans Petter Jansson  <hpj@ximian.com>

	* Makefile.am: Remove rule that prevented install.

2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* mouse.desktop.in.in (Exec): Update

2001-12-19  Bradford Hovinen  <hovinen@ximian.com>

	* mouse-properties-capplet.c (double_click_from_gconf): Divide by
	1000.0, use floats
	(double_click_to_gconf): Implement
	(drawing_area_button_press_event): Don't call
	double_click_from_gconf
	(drawing_area_button_press_event): Use response of
	gconf_change_set_check_value to determine if value is in changeset
	(main): Remove --apply and --init-session-settings
	(setup_dialog): Use g_object_set to set the conversion callbacks
	(*_{to|from}_gconf): Update to reflect changes in gconf peditors