@@ -1,3 +1,7 @@
+Fri Feb  8 01:41:40 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* Makefile.am (pixmap_DATA): install cursor images.
+
 2002-02-04  Lauris Kaplinski  <lauris@ximian.com>
 
 	* gnome-mouse-properties.c (drawing_area_expose_event): Kill warning
